# libKEDF

./: .gitignore  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  GridFiller.cpp  GridFiller.hpp  MainClient.cpp  StringUtils.cpp  StringUtils.hpp
cmake-modules/: FindFFTW3.cmake
fortran/: LibKEDFInterface.f90
include/: BasicGridComputer.hpp  CartesianGrid.hpp  CartesianOCLOOPGrid.hpp  CartesianOOPGrid.hpp  FermiWaveVector.hpp  FourierGrid.hpp  FourierKEDF.hpp  GVectorBuilder.hpp  Grid.hpp  GridFactory.hpp  HelperFunctions.hpp  HuangCarter.hpp  HuangCarterOCL.hpp  IntKernelODE.hpp  KEDF.hpp  KEDFConstants.hpp  KEDFFactory.hpp  MultiTermKEDF.hpp  StressTensor.hpp  TayloredWangGovindCarter.hpp  TayloredWangGovindCarterOCL.hpp  ThomasFermi.hpp  ThomasFermiOCL.hpp  VonWeizsaecker.hpp  VonWeizsaeckerOCL.hpp  WangGovindCarter.hpp  WangTeter.hpp  WangTeterOCL.hpp  libKEDF.h
java/src/c/: CMakeLists.txt  libkedf_LibKEDF.c  libkedf_LibKEDF.h
java/src/java/libkedf/: GridConfig.java  LibKEDF.java  LibKEDFBuilder.java
rksuite/: CMakeLists.txt  rksuite.cpp  rksuite.h
spline/: CMakeLists.txt  spline.cpp  spline.hpp
src/: CMakeLists.txt  CartesianOCLOOPGrid.cpp  CartesianOOPGrid.cpp  FermiWaveVector.cpp  GVectorBuilder.cpp  GridFactory.cpp  HelperFunctions.cpp  HuangCarterKernel.cpp  IntKernelODE.cpp  MemoryFunctions.cpp  StressTensor.cpp  WangGovindCarterKernel.cpp  WangTeterKernel.cpp  libKEDF.cpp
testdata/al-lda-wgc/: wgc1st_ocl.stub  wgc1st_omp.stub  wgc2nd_ocl.stub  wgc2nd_omp.stub
testdata/al-lda-wgc_uneq/: density_1st  density_2nd  potential_TF_1st  potential_TF_2nd  potential_VW_1st  potential_VW_2nd  potential_WGC_1st  potential_WGC_2nd  tf_ocl.stub  tf_omp.stub  vw_ocl.stub  vw_omp.stub  wgc1st_ocl.stub  wgc1st_omp.stub  wgc2nd_ocl.stub  wgc2nd_omp.stub
testdata/al-lda-wt/: tf_ocl.stub  tf_omp.stub  vw_ocl.stub  vw_omp.stub  wt_ocl.stub  wt_omp.stub
testdata/al-lda-wt_uneq/: density  potential_TF  potential_VW  potential_WT  wt_ocl.stub  wt_omp.stub
testdata/si-pbe-hc/: density.xz  hc_ocl.stub  hc_omp.stub  potential_HC.xz
utils/: MacroTester.scala
